arch/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinger-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health/$2
  namespace: microservices
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/(.*)($|/)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: pinger-service
              port:
                number: 8000
